# distillshield

./: .env.example  .gitignore  Makefile  README.md  RUN_INSTRUCTIONS.txt  pyproject.toml
apps/api/distillshield_api/: main.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.jsx  api.js  styles.css
distillshield.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: implementation_plan.md  limitations.md
scripts/: _bootstrap.py  evaluate.py  generate_scenarios.py  generate_synthetic.py  train_baseline.py
tests/integration/: test_api_smoke.py
tests/unit/: test_experiment_summary_schema.py  test_policy_transform.py  test_rules_and_policy.py  test_synthetic_feature_pipeline.py
